manifests/web-app/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: web-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-app
  template:
    metadata:
      labels: 
        app: web-app
    spec:
      terminationGracePeriodSeconds: 5
      containers:
      - name: web-app
        image:  mingtong/web-app:latest
        ports:
          - name: http
            containerPort: 80
        resources:
          requests: 
            cpu: 500m
            memory: 512Mi
          limits:
            cpu: 2000m
            memory: 2048Mi
