manifests/web-app/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-app
spec: 
  type: ClusterIP
  selector:
    app: web-app
  ports:
  - name: http
    port: 8080
    targetPort: 80
